--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ repositories {
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.21'
     compile 'org.slf4j:slf4j-simple:1.7.22'
+    compile 'net.sourceforge.jeval:jeval:0.9.4'
     testCompile 'junit:junit:4.12'
 }
 
